fix: mns-button overflow, mnsMessage default params

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -150,6 +150,10 @@ a.navbar-brand {
   // height: 500px;
 }
 
+.mns-button {
+  overflow: hidden;
+}
+
 mnf-form, mnf-form-grid {
   .changed {
     background-color: yellow;
